src/components/NoteDialogComponents/NoteDialogNoteWrapper.scss
@import "constants/style";
@import "components/Note/Note.scss";
@import "routes/StackView/StackView.scss";

.note-dialog__scrollbar {
  display: flex;
  flex-direction: column;
  overflow: hidden scroll;

  box-sizing: border-box;
  border-radius: $note__border-radius;

  @include scrollbar();
}

.note-dialog__note-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;

  gap: $spacing--base;
}

@media #{$smartphone} {
  .note-dialog__scrollbar {
    padding-left: 0;
  }
}

@media screen and (max-width: $breakpoint--desktop) {
  .note-dialog__scrollbar {
    padding-bottom: $spacing--xl;
  }
}

